--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Register_Retrofit_Demo"
         tools:targetApi="31">
         <activity
+            android:name=".splashscreen"
+            android:exported="false" />
+        <activity
             android:name=".Login_page"
             android:exported="false" />
         <activity
